# back-Template-fastapi

./: Dockerfile  README  pyproject.toml
.github/workflows/: deploy.yml
Aulas/: Aula01.md  Aula02.md  Aula03.md
Aulas/docker/: docker-compose.yml  roteiro_pratico.md
fast_zero/: app.py  database.py  form_login.html  models.py  schemas.py
